# test-substrate-node

./: .gitignore  Makefile
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
